--- a/EEE457/Mainpage.html
+++ b/EEE457/Mainpage.html
@@ -114,11 +114,11 @@
   <footer>
     <p>I want to learn...</p>
     <div class="flags">
-      <img src="https://flagcdn.com/us.svg" alt="English">
-      <img src="https://flagcdn.com/es.svg" alt="Spanish" onclick="window.location.href='spanish.html'" style="cursor:pointer;">
-      <img src="https://flagcdn.com/fr.svg" alt="French">
-      <img src="https://flagcdn.com/cn.svg" alt="Chinese">
-      <img src="https://flagcdn.com/un.svg" alt="Other">
+        <button onclick="window.location.href='spanish.html'">English</button>
+        <button onclick="window.location.href='spanish.html'">Spanish</button>
+        <button onclick="window.location.href='spanish.html'">French</button>
+        <button onclick="window.location.href='spanish.html'">Chinese</button>
+        <button onclick="window.location.href='spanish.html'">Other</button>
     </div>
   </footer>
 </body>
